# braincore

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
braincore/: __init__.py  _common.py  _module.py  _state.py  _transform.py  _utils.py  environ.py  import_utils.py  mixin.py  ndarray.py  random.py  share.py  surrogate.py
braincore/_projection/: __init__.py  _align_post.py  _delta.py  align_post.py  align_pre.py  delta.py  vanilla.py
braincore/integrate/: __init__.py  _joint_eq.py  _ode.py  _quadrature.py
braincore/math/: __init__.py  _einops.py  _misc.py
braincore/math/tests/: test_einops.py  test_einops_parsing.py  test_misc.py
braincore/tests/: test_mixin.py  test_module.py  test_random.py
braincore/transform/: __init__.py  _controls.py  _gradients.py  _jit.py  _jit_error.py  _make_jaxpr.py  _progress_bar.py
braincore/transform/tests/: test_autograd.py  test_controls.py  test_make_jaxpr.py
braincore/units/: __init__.py  all_units.py  base.py  unitsafefunctions.py
braincore/units/tests/: test_units.py
brainpy/core/: __init__.py  _module.py  _state.py  _transform.py  _utils.py  environ.py  math.py  misc.py  mixin.py  module.py  ndarray.py  random.py  share.py  state.py  surrogate.py  transform.py
brainpy/core/_projection/: align_pre.py  delta.py  vanilla.py
brainpy/core/math/: __init__.py  _misc.py
brainpy/core/projection/: __init__.py  _utils.py  align_post.py  align_pre.py  delta.py  vanilla.py
brainpy/core/tests/: test_math.py  test_mixin.py  (+2 more)
examples/: hh_neuron_model.py
(+5 files in other folders)
