[build-system]
requires = ["setuptools", "numpy", 'jax', 'jaxlib']
build-backend = "setuptools.build_meta"


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "brainpy.core"
description = "The core system for BrainPy programming framework."
readme = 'README.md'
license = { file = 'LICENSE' }
requires-python = '>=3.9'
authors = [{ name = 'Chaoming Wang', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ["BrainPy", "brain simulation", "brain-inspired computing"]

dependencies = [
    'jax',
    'jaxlib',
    'numpy',
]

dynamic = ['version']

[tool.flit.module]
name = "brainpy.core"

[project.urls]
homepage = 'http://github.com/brainpy'
repository = 'http://github.com/brainpy/brainpy.core'

[project.optional-dependencies]
testing = [
    'pytest',
]
